# geoloc

./: Cargo.toml  README.md  db.py  sqlx-data.json
src/: command.rs  database.rs  error.rs  lib.rs  main.rs  protocol.rs  result.rs
testdata/: test.db
