[package]
authors = ["styvane <4968379+styvane@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "geoloc"
repository = "https://github.com/styvane/geoloc"
rust-version = "1.65"
version = "0.1.0"

[profile.release]
opt-level = 3

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
async-trait = "0.1.59"
csv = "1.1"
rustyline = "10.0.0"
tempfile = "3"
thiserror = "1.0"

[dependencies.sqlx]
features = ["macros", "migrate", "sqlite", "runtime-async-std-rustls", "offline"]
version = "0.6.2"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
